[package]
name = "lcid"
version = "0.2.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
description = "Parse language code identifiers per MS-LCID."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tobywf/lcid-rs"
keywords = ["LCID", "language-identifier", "CultureInfo"]
categories = ["localization", "value-formatting"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

autoexamples = true
autobenches = false

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = false
doc = true

[dependencies]
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5"
lcid_gen = { path = "lcid_gen" }

[workspace]
members = ["lcid_gen"]
