[package]
name = "lcid"
version = "0.3.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.56"
description = "Parse language code identifiers per MS-LCID."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tobywf/lcid-rs"
keywords = ["LCID", "language-identifier", "CultureInfo"]
categories = ["localization", "value-formatting"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

autoexamples = true
autobenches = false

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = false
doc = true

[dependencies]

[dev-dependencies]

[workspace]
members = ["lcid_gen"]
