[package]
name = "lcid_gen"
version = "0.1.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
description = "A helper crate for lcid that parses langague information from JSON"
license = "MIT OR Apache-2.0"
publish = false

autoexamples = false
autobenches = false

[lib]
path = "src/lib.rs"
test = true
doctest = false
bench = false
doc = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
