[package]
name = "lcid"
version = "0.1.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
description = "Parse language code identifiers per MS-LCID"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tobywf/lcid"
keywords = ["language code identifier", "LCID", "language identifier"]
categories = []
include = ["build.rs", "src/**/*.rs", "../README.md", "LICENSE-APACHE", "LICENSE-MIT"]

build = "build.rs"
autoexamples = true
autobenches = false

[lib]
path = "src/lib.rs"
test = true
doctest = false
bench = false
doc = true

[dependencies]
thiserror = "1.0"

[build-dependencies]
lcid_gen = { path = "../lcid-gen" }

[dev-dependencies]
lcid_gen = { path = "../lcid-gen" }
assert_matches = "1.5"
